# sandol_meal_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py
app/config/: __init__.py  config.py
app/routers/: __init__.py  admin.py  auth.py  owner.py
app/services/: __init__.py  keycloak_service.py  meal_client.py  session_service.py
app/static/css/: app.css  ops-overrides.css
app/templates/: base.html  error.html  root.html
app/templates/admin/: meal_form.html  meals.html  request_detail.html  requests.html  restaurant_form.html  restaurants.html
app/templates/owner/: new_request.html  request_detail.html  requests.html
