[project]
name = "sandol-meal-web"
version = "0.1.0"
description = "Sandol meal admin and owner web"
authors = [{ name = "teamSANDOL" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "fastapi~=0.115.6",
    "uvicorn>=0.33",
    "httpx>=0.28",
    "python-keycloak>=7.0.2",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "diskcache>=5.6.3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.15.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "D", "R", "B", "N", "S", "PL"]
ignore = ["E203", "E501", "D415", "D403"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_|__)$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
